--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </p>
 
         <div class="flex flex-col md:flex-row gap-6">
-            <a href="https://wa.me/917020729200" class="bg-cyan-500 text-black font-black px-10 py-5 rounded-2xl neon-glow hover:scale-105 transition-all uppercase tracking-tight flex items-center gap-3">
+            <a href="audit.html" class="bg-cyan-500 text-black font-black px-10 py-5 rounded-2xl neon-glow hover:scale-105 transition-all uppercase tracking-tight flex items-center gap-3">
                 <i class="fa-solid fa-bolt"></i> Start Growing
             </a>
             <a href="#services" class="border border-white/10 hover:border-white/40 px-10 py-5 rounded-2xl transition-all font-bold flex items-center gap-3">
