--- a/Pay-per-click (PPC).html
+++ b/Pay-per-click (PPC).html
@@ -1,6 +1,7 @@
 <html>
+  
   <body>
-
+     <head> <link rel="stylesheet" href="styles.css">  </head>
     <section class="min-h-screen bg-[#050505] text-white font-sans overflow-hidden">
     
     <div class="relative pt-32 pb-20 px-6 border-b border-white/5">
