--- a/Pay-per-click (PPC).html
+++ b/Pay-per-click (PPC).html
@@ -1,7 +1,37 @@
 <html>
   
   <body>
-     <head> <link rel="stylesheet" href="styles.css">  </head>
+     <head> <style>
+        ::selection { background: #00D1FF; color: #000; }
+        .funnel-input {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .funnel-input:focus {
+            background: rgba(0, 209, 255, 0.05);
+            border-color: #00D1FF;
+            box-shadow: 0 0 20px rgba(0, 209, 255, 0.1);
+            transform: translateY(-2px);
+        }
+        .option-card {
+            background: rgba(255, 255, 255, 0.02);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            transition: all 0.3s ease;
+        }
+        .option-card.active {
+            border-color: #00D1FF;
+            background: rgba(0, 209, 255, 0.1);
+            box-shadow: 0 0 25px rgba(0, 209, 255, 0.15);
+        }
+        .step-content { animation: fadeInSlide 0.6s ease forwards; }
+        @keyframes fadeInSlide {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .float-icon { animation: floating 3s ease-in-out infinite; }
+        @keyframes floating { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+    </style>  </head>
     <section class="min-h-screen bg-[#050505] text-white font-sans overflow-hidden">
     
     <div class="relative pt-32 pb-20 px-6 border-b border-white/5">
