--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <nav class="flex flex-col p-8 space-y-8">
         <a href="index.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Home</a>
         <a href="#services" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">Services</a>
-        <a href="#about" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">About</a>
+        <a href="#bg-[#050505] py-24 px-6" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">About</a>
         <a href="portfolio.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Works</a>
         
         <div class="pt-8 border-t border-white/10">
