--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
     <nav class="flex flex-col p-8 space-y-8">
         <a href="index.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Home</a>
-        <a href="#services" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">Services</a>
+        <a href="servicepage.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">Services</a>
         <a href="about.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">About</a>
-        <a href="portfolio.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Works</a>
+        <a href=""stories.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Works</a>
         
         <div class="pt-8 border-t border-white/10">
             <p class="text-gray-500 text-xs uppercase tracking-widest mb-6">Quick Connect</p>
@@ -122,9 +122,9 @@
         <div class="text-2xl font-black text-white tracking-tighter">UNLITIFY<span class="text-[#00D1FF]">.</span></div>
         
         <nav class="hidden lg:flex space-x-8">
-            <a href="#" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">Services</a>
+            <a href="servicepage.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">Services</a>
             <a href="about.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">About</a>
-            <a href="#" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">Success Stories</a>
+            <a href="stories.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">Success Stories</a>
         </nav>
 
         <button onclick="toggleMenu()" class="lg:hidden flex flex-col gap-1.5 group">
