--- a/job.html
+++ b/job.html
@@ -120,13 +120,13 @@
         <p class="text-gray-400 mb-10 italic">"Pick your role and claim your spot."</p>
         
         <div class="grid grid-cols-1 gap-4">
-            <a href="#" class="block glass-morphism p-5 rounded-2xl hover:bg-cyan-500 hover:text-black transition-all group">
+            <a href="https://wa.me/917020729200?text=*DM%20%22JOIN%201%22*%20-%20I%20want%20to%20acquire%20clients" class="block glass-morphism p-5 rounded-2xl hover:bg-cyan-500 hover:text-black transition-all group">
                 <span class="font-bold">DM "JOIN 1"</span> - I want to acquire clients
             </a>
-            <a href="#" class="block glass-morphism p-5 rounded-2xl hover:bg-purple-500 transition-all group">
+            <a href="https://wa.me/917020729200?text=*DM%20%22JOIN%202%22*%20-%20I%20want%20to%20manage%20teams" class="block glass-morphism p-5 rounded-2xl hover:bg-purple-500 transition-all group">
                 <span class="font-bold">DM "JOIN 2"</span> - I want to manage teams
             </a>
-            <a href="#" class="block glass-morphism p-5 rounded-2xl hover:bg-emerald-500 transition-all group">
+            <a href="https://wa.me/917020729200?text=DM%20%22JOIN%203%22%20-%20I%20am%20a%20freelancer" class="block glass-morphism p-5 rounded-2xl hover:bg-emerald-500 transition-all group">
                 <span class="font-bold">DM "JOIN 3"</span> - I am a freelancer
             </a>
         </div>
