--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <a href="index.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Home</a>
         <a href="servicepage.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">Services</a>
         <a href="about.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">About</a>
-        <a href=""stories.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Works</a>
+        <a href=""job.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Work with us </a>
         
         <div class="pt-8 border-t border-white/10">
             <p class="text-gray-500 text-xs uppercase tracking-widest mb-6">Quick Connect</p>
@@ -102,7 +102,7 @@
                     <i class="fab fa-whatsapp text-[#25D366] text-2xl mb-2"></i>
                     <span class="text-white text-[10px] font-bold">WHATSAPP</span>
                 </a>
-                <a href="mailto:hello@unlitify.com" class="flex flex-col items-center justify-center p-4 bg-white/5 rounded-2xl border border-white/10">
+                <a href="aviralpathakwork@gmail.com" class="flex flex-col items-center justify-center p-4 bg-white/5 rounded-2xl border border-white/10">
                     <i class="fa-solid fa-envelope text-[#00D1FF] text-2xl mb-2"></i>
                     <span class="text-white text-[10px] font-bold">EMAIL US</span>
                 </a>
@@ -125,6 +125,7 @@
             <a href="servicepage.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">Services</a>
             <a href="about.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">About</a>
             <a href="stories.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">Success Stories</a>
+            <a href="job.html" class="text-white/70 hover:text-[#00D1FF] font-medium transition-colors">work with us </a>
         </nav>
 
         <button onclick="toggleMenu()" class="lg:hidden flex flex-col gap-1.5 group">
