--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         <a href="index.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Home</a>
         <a href="servicepage.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">Services</a>
         <a href="about.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">About</a>
-        <a href=""job.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors">Work with us </a>
+         <a href="job.html" class="text-4xl font-black text-white hover:text-[#00D1FF] transition-colors" onclick="toggleMenu()">Work with us</a>
+       
         
         <div class="pt-8 border-t border-white/10">
             <p class="text-gray-500 text-xs uppercase tracking-widest mb-6">Quick Connect</p>
